--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
   </head>
 
   <body>
-    <tabs-list></tabs-list>
+    <div style="width: 100%; margin: auto; padding: 20px">
+      <div class="search-bar">
+        <form action="https://duckduckgo.com/" method="get" style="width: 100%; max-width: 600px">
+          <input type="text" name="q" placeholder="Search DuckDuckGo" />
+        </form>
+      </div>
+
+      <tabs-list></tabs-list>
+    </div>
 
     <script type="text/javascript" src="src/common/palette.js"></script>
     <script type="text/javascript" src="src/common/utils.js"></script>
