add target to form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div style="width: 100%; margin: auto; padding: 20px">
       <div class="search-bar">
-        <form action="https://duckduckgo.com/" method="get" style="width: 100%; max-width: 600px">
+        <form action="https://duckduckgo.com/" method="get" style="width: 100%; max-width: 600px" target="_blank">
           <input type="text" name="q" placeholder="Search DuckDuckGo" />
         </form>
       </div>
